change _config.yml, trying to get a blog feed going

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: SortaSota
+url: https://rivesunder.github.io/SortaSota
 theme: jekyll-theme-dinky
+markdown: kramdown
+plugins: 
+    - jekyll-feed
