--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: SortaSota
 #email: your-email@example.com
-baseurl: "https://rivesunder.github.io/SortaSota/"
+baseurl: ""
 url: "https://rivesunder.github.io/SortaSota/"
 twitter_username: rivesunder
 #github_username:  rivesunder
