--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,11 @@
 # in the templates via {{ site.myvariable }}.
 title: SortaSota
 #email: your-email@example.com
-baseurl: ""
-url: "https://rivesunder.github.io/SortaSota/"
+baseurl: "SortaSota"
+url: "https://rivesunder.github.io/"
 twitter_username: rivesunder
-#github_username:  rivesunder
-gitlab_username: rivesunder
+github_username:  rivesunder
+#gitlab_username: rivesunder
 
 # Build settings
 markdown: kramdown
